fixed story page background image not covering full height, reduced padding bottom on story page container

--- a/public/style.css
+++ b/public/style.css
@@ -465,41 +465,17 @@ footer {
 .story-page-container {
   color: #e6e4e0;
   background: #202020;
-  background: radial-gradient(rgba(36, 36, 36, 0.88), rgba(36, 36, 36, 0.88)),
+  background: radial-gradient(rgba(36, 36, 36, 0.9), rgba(36, 36, 36, 0.9)),
     url("img/flameFinal.jpg");
 
   background-repeat: no-repeat;
   background-position: top;
   box-shadow: inset 0 18px 15px -20px rgba(0, 0, 0, 0.8);
-
+  background-size: cover;
   padding-bottom: 1rem;
-  height: auto;
+  height: 100%;
   position: relative;
 }
-
-/* .story-page-title-background {
-  background-image: linear-gradient(
-      rgba(59, 59, 59, 0.4),
-      rgba(32, 32, 32, 0.5),
-      rgb(15, 15, 15, 0.8)
-    ),
-    url("img/plantscrop.jpg");
-  background-position: 50% 40%;
-  background-size: contain;
-  background-attachment: fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
-
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 730px;
-  width: 100vw;
-
-  z-index: -1;
-  opacity: 0.4;
-  clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
-} */
 
 .story-page-title {
   padding: 8rem 0 8rem;
@@ -575,11 +551,11 @@ footer {
 }
 
 /* ----------Compose Page---------- */
-input[type="radio"]:checked + label::before {
+/* input[type="radio"]:checked + label::before {
   background-color: #be3624;
   border-color: #000;
   color: #fff;
-}
+} */
 
 /* -------Animations------- */
 
@@ -666,7 +642,7 @@ input[type="radio"]:checked + label::before {
 
   .story-page-container {
     grid-template-columns: repeat(1, 1fr);
-    padding: 3.5rem 0 4rem;
+    padding: 3.5rem 0 3rem;
   }
 
   .chili {
@@ -689,8 +665,6 @@ input[type="radio"]:checked + label::before {
     font-family: "Rock Salt", sans-serif;
     z-index: 5;
     padding-bottom: 3rem;
-    /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5),
-      0px -4px 6px rgba(255, 255, 255, 0.3); */
   }
 
   .story-page-title {
@@ -789,6 +763,7 @@ input[type="radio"]:checked + label::before {
 
   .story-page-container {
     padding-top: 0;
+    padding-bottom: 1rem;
   }
 
   .story-page-title {
